Add script to retire old package versions and update workflows
- Introduced a new Elixir script (`retire_old.exs`) to automate the retirement of outdated package versions based on their age.
- Updated the `auto-release.yml` workflow to read the current version from `mix.exs` and trigger the retirement script after publishing.
- Enhanced the `release.yml` workflow to include a step for retiring old versions post-release.
- Added a new workflow (`update-metadata.yml`) for scheduled updates and metadata management.
- Updated various model provider JSON files with new models and adjusted existing model details for accuracy.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -45,6 +45,11 @@ jobs:
           HEX_API_KEY: ${{ secrets.HEX_API_KEY }}
         run: mix hex.publish --yes
 
+      - name: Retire old versions
+        env:
+          HEX_API_KEY: ${{ secrets.HEX_API_KEY }}
+        run: elixir .github/scripts/retire_old.exs
+
       - name: Extract version from tag
         id: version
         run: echo "VERSION=${GITHUB_REF#refs/tags/v}" >> $GITHUB_OUTPUT
