--- a/.github/workflows/auto-release.yml
+++ b/.github/workflows/auto-release.yml
@@ -25,39 +25,20 @@ jobs:
           fetch-depth: 0
           token: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Set up Elixir
-        uses: erlef/setup-beam@v1
-        with:
-          elixir-version: '1.16'
-          otp-version: '26'
+      - name: Read version from mix.exs
+        id: version
+        run: |
+          VERSION=$(grep -E '@version "' mix.exs | sed -E 's/.*"([^"]+)".*/\1/')
+          echo "version=$VERSION" >> "$GITHUB_OUTPUT"
 
-      - name: Restore dependencies cache
-        uses: actions/cache@v4
-        with:
-          path: |
-            deps
-            _build
-          key: ${{ runner.os }}-mix-1.16-26-${{ hashFiles('**/mix.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-mix-1.16-26-
-
-      - name: Install dependencies
-        run: mix deps.get
-
-      - name: Configure git
+      - name: Generate changelog and create tag
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
-
-      - name: Bump version to current date
-        run: mix llm_models.version
-
-      - name: Generate changelog and create tag
-        run: mix git_ops.release
+          
+          mix git_ops.release --yes --override ${{ steps.version.outputs.version }}
 
       - name: Push changes and tags
         run: |
           git push origin main
           git push --tags
-
-      # The release.yml workflow will trigger on the new tag
