--- a/priv/llm_db/manifest.json
+++ b/priv/llm_db/manifest.json
@@ -1,6 +1,7 @@
 {
-  "generated_at": "2025-11-19T02:26:01.805524Z",
+  "generated_at": "2025-11-27T17:58:32.599207Z",
   "providers": [
+    "agentrouter",
     "ai21",
     "aihubmix",
     "aion-labs",
@@ -18,6 +19,7 @@
     "azure",
     "azure_cognitive_services",
     "baidu",
+    "bailing",
     "baseten",
     "bytedance",
     "cerebras",
@@ -45,6 +47,7 @@
     "inception",
     "inference",
     "inflection",
+    "io_intelligence",
     "kwaipilot",
     "liquid",
     "llama",
@@ -65,18 +68,21 @@
     "neversleep",
     "nousresearch",
     "nvidia",
+    "ollama_cloud",
     "openai",
     "opencode",
     "opengvlab",
     "openrouter",
     "ovhcloud",
     "perplexity",
+    "poe",
     "qwen",
     "raifle",
     "relace",
     "requesty",
     "sao10k",
     "scaleway",
+    "siliconflow",
     "stepfun-ai",
     "submodel",
     "switchpoint",
