Fix workflow: use manifest.json and providers directory structure

--- a/.github/workflows/build-metadata.yml
+++ b/.github/workflows/build-metadata.yml
@@ -65,7 +65,7 @@ jobs:
           if [ "${{ inputs.force_update }}" = "true" ]; then
             echo "has_changes=true" >> $GITHUB_OUTPUT
             echo "Force update enabled - proceeding with PR creation"
-          elif git diff --quiet priv/llm_db/upstream/ priv/llm_db/snapshot.json lib/llm_db/generated/valid_providers.ex; then
+          elif git diff --quiet priv/llm_db/ lib/llm_db/generated/; then
             echo "has_changes=false" >> $GITHUB_OUTPUT
             echo "No changes detected in metadata files"
           else
@@ -78,22 +78,18 @@ jobs:
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          SNAPSHOT_FILE="priv/llm_db/snapshot.json"
-          SNAPSHOT_OLD="/tmp/snapshot_old.json"
+          MANIFEST_FILE="priv/llm_db/manifest.json"
           OUTPUT_FILE="/tmp/metadata_summary.md"
-
-          # Backup old snapshot for comparison
-          git show HEAD:"$SNAPSHOT_FILE" > "$SNAPSHOT_OLD" 2>/dev/null || echo "{}" > "$SNAPSHOT_OLD"
 
           echo "## Model Metadata Update" > "$OUTPUT_FILE"
           echo "" >> "$OUTPUT_FILE"
           echo "Automated metadata update from upstream sources." >> "$OUTPUT_FILE"
           echo "" >> "$OUTPUT_FILE"
 
-          if [ -f "$SNAPSHOT_FILE" ]; then
-            PROVIDER_COUNT=$(jq '.providers | length' "$SNAPSHOT_FILE")
-            MODEL_COUNT=$(jq '.models | length' "$SNAPSHOT_FILE")
-            GENERATED_AT=$(jq -r '.metadata.generated_at' "$SNAPSHOT_FILE")
+          if [ -f "$MANIFEST_FILE" ]; then
+            PROVIDER_COUNT=$(jq '.providers | length' "$MANIFEST_FILE")
+            GENERATED_AT=$(jq -r '.generated_at' "$MANIFEST_FILE")
+            MODEL_COUNT=$(find priv/llm_db/providers -name "*.json" -exec jq '.models | length' {} \; | awk '{s+=$1} END {print s}')
 
             echo "### Summary" >> "$OUTPUT_FILE"
             echo "" >> "$OUTPUT_FILE"
@@ -101,40 +97,12 @@ jobs:
             echo "- Models: $MODEL_COUNT" >> "$OUTPUT_FILE"
             echo "- Generated: $GENERATED_AT" >> "$OUTPUT_FILE"
             echo "" >> "$OUTPUT_FILE"
-
-            # Calculate changes
-            if [ -f "$SNAPSHOT_OLD" ] && [ "$(cat "$SNAPSHOT_OLD")" != "{}" ]; then
-              OLD_PROVIDER_COUNT=$(jq '.providers | length' "$SNAPSHOT_OLD" 2>/dev/null || echo "0")
-              OLD_MODEL_COUNT=$(jq '.models | length' "$SNAPSHOT_OLD" 2>/dev/null || echo "0")
-
-              PROVIDER_DIFF=$((PROVIDER_COUNT - OLD_PROVIDER_COUNT))
-              MODEL_DIFF=$((MODEL_COUNT - OLD_MODEL_COUNT))
-
-              if [ $PROVIDER_DIFF -ne 0 ] || [ $MODEL_DIFF -ne 0 ]; then
-                echo "### Changes" >> "$OUTPUT_FILE"
-                echo "" >> "$OUTPUT_FILE"
-
-                if [ $PROVIDER_DIFF -gt 0 ]; then
-                  echo "- Providers added: $PROVIDER_DIFF" >> "$OUTPUT_FILE"
-                elif [ $PROVIDER_DIFF -lt 0 ]; then
-                  echo "- Providers removed: ${PROVIDER_DIFF#-}" >> "$OUTPUT_FILE"
-                fi
-
-                if [ $MODEL_DIFF -gt 0 ]; then
-                  echo "- Models added: $MODEL_DIFF" >> "$OUTPUT_FILE"
-                elif [ $MODEL_DIFF -lt 0 ]; then
-                  echo "- Models removed: ${MODEL_DIFF#-}" >> "$OUTPUT_FILE"
-                fi
-
-                echo "" >> "$OUTPUT_FILE"
-              fi
-            fi
           fi
 
           echo "### Changed Files" >> "$OUTPUT_FILE"
           echo "" >> "$OUTPUT_FILE"
           echo "\`\`\`" >> "$OUTPUT_FILE"
-          git diff --stat priv/llm_db/upstream/ priv/llm_db/snapshot.json lib/llm_db/generated/valid_providers.ex >> "$OUTPUT_FILE"
+          git diff --stat priv/llm_db/ lib/llm_db/generated/ >> "$OUTPUT_FILE"
           echo "\`\`\`" >> "$OUTPUT_FILE"
 
           # Create branch and commit
@@ -144,9 +112,8 @@ jobs:
           git config user.email "github-actions[bot]@users.noreply.github.com"
 
           git checkout -b "$BRANCH_NAME"
-          git add priv/llm_db/upstream/
-          git add priv/llm_db/snapshot.json
-          git add lib/llm_db/generated/valid_providers.ex
+          git add priv/llm_db/
+          git add lib/llm_db/generated/
 
           git commit -m "Update model metadata" \
                      -m "Automated metadata update from upstream sources"
